--- a/arch/sandbox/dts/sandbox.dtsi
+++ b/arch/sandbox/dts/sandbox.dtsi
@@ -16,6 +16,10 @@
 		#sound-dai-cells = <1>;
 	};
 
+	bootdev {
+		compatible = "sandbox,bootdev-host";
+	};
+
 	buttons {
 		compatible = "gpio-keys";
 
