--- a/arch/sandbox/dts/sandbox.dtsi
+++ b/arch/sandbox/dts/sandbox.dtsi
@@ -16,8 +16,13 @@
 		#sound-dai-cells = <1>;
 	};
 
-	bootdev {
+	host-fs {
 		compatible = "sandbox,bootdev-host";
+	};
+
+	bootstd {
+		compatible = "u-boot,boot-std";
+		filename-prefixes = "./";
 	};
 
 	buttons {
