--- a/test/boot/Makefile
+++ b/test/boot/Makefile
@@ -3,3 +3,5 @@
 # Copyright 2021 Google LLC
 
 obj-$(CONFIG_BOOTSTD) += bootdev.o bootstd_common.o bootflow.o bootmeth.o
+
+obj-$(CONFIG_BOOTMETH_VBE_SIMPLE) += vbe_simple.o
