--- a/configs/qemu_arm_spl_defconfig
+++ b/configs/qemu_arm_spl_defconfig
@@ -70,3 +70,9 @@ CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_PCI=y
 # CONFIG_BINMAN_FDT is not set
+CONFIG_SPL_NO_BSS_LIMIT=y
+CONFIG_SYS_PBSIZE=532
+CONFIG_SYS_CBSIZE=512
+CONFIG_SYS_BOOTM_LEN=0x4000000
+CONFIG_HAS_CUSTOM_SYS_INIT_SP_ADDR=y
+CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0x40200000
