--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -408,10 +408,28 @@ config BOOTMETH_VBE
 	  supports selection of various firmware components, seleciton of an OS to
 	  boot as well as updating these using fwupd.
 
+config VPL_BOOTMETH_VBE
+	bool "Bootdev support for Verified Boot for Embedded (VPL)"
+	depends on VPL && FIT
+	default y
+	help
+	  Enables support for VBE boot. This is a standard boot method which
+	  supports selection of various firmware components, seleciton of an OS to
+	  boot as well as updating these using fwupd.
+
 if BOOTMETH_VBE
 
 config BOOTMETH_VBE_SIMPLE
 	bool "Bootdev support for VBE 'simple' method"
+	default y
+	help
+	  Enables support for VBE 'simple' boot. This allows updating a single
+	  firmware image in boot media such as MMC. It does not support any sort
+	  of rollback, recovery or A/B boot.
+
+config VPL_BOOTMETH_VBE_SIMPLE
+	bool "Bootdev support for VBE 'simple' method (VPL)"
+	depends on VPL
 	default y
 	help
 	  Enables support for VBE 'simple' boot. This allows updating a single
