--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -95,13 +95,13 @@
 		firmware0 {
 			u-boot,dm-vpl;
 			compatible = "fwupd,vbe-simple";
-			storage = "mmc1";
-			area-start = <0x400>;
-			area-size = <0x1000>;
-			skip-offset = <0x200>;
-			state-offset = <0x400>;
+			storage = "mmc2";
+			skip-offset = <0x200000>;
+			area-start = <0>;
+			area-size = <0xe00000>;
+			state-offset = <0xe00000>;
 			state-size = <0x40>;
-			version-offset = <0x800>;
+			version-offset = <0xe00200>;
 			version-size = <0x100>;
 		};
 	};
@@ -952,6 +952,7 @@
 
 	mmc2 {
 		compatible = "sandbox,mmc";
+		filename = "image.bin";
 		non-removable;
 	};
 
