--- a/boot/Kconfig
+++ b/boot/Kconfig
@@ -163,7 +163,6 @@ config SPL_FIT_FULL_CHECK
 	  of bugs or omissions in the code. This includes a bad structure,
 	  multiple root nodes and the like.
 
-
 config SPL_FIT_SIGNATURE
 	bool "Enable signature verification of FIT firmware within SPL"
 	depends on SPL_DM
@@ -291,6 +290,57 @@ config SPL_FIT_GENERATOR
 	  include in the generated image.
 
 endif # SPL
+
+if VPL
+
+config VPL_FIT
+	bool "Support Flattened Image Tree within VPL"
+	depends on VPL
+	default y
+	select VPL_HASH
+	select VPL_OF_LIBFDT
+
+config VPL_FIT_PRINT
+	bool "Support FIT printing within VPL"
+	depends on VPL_FIT
+	default y
+	help
+	  Support printing the content of the fitImage in a verbose manner in VPL.
+
+config VPL_FIT_FULL_CHECK
+	bool "Do a full check of the FIT before using it"
+	default y
+	help
+	  Enable this do a full check of the FIT to make sure it is valid. This
+	  helps to protect against carefully crafted FITs which take advantage
+	  of bugs or omissions in the code. This includes a bad structure,
+	  multiple root nodes and the like.
+
+config VPL_FIT_SIGNATURE
+	bool "Enable signature verification of FIT firmware within VPL"
+	depends on VPL_DM
+	depends on VPL_LOAD_FIT || VPL_LOAD_FIT_FULL
+	default y
+	select FIT_SIGNATURE
+	select VPL_FIT
+	select VPL_CRYPTO
+	select VPL_HASH
+	imply VPL_RSA
+	imply VPL_RSA_VERIFY
+	select VPL_IMAGE_SIGN_INFO
+	select VPL_FIT_FULL_CHECK
+
+config VPL_FIT_SIGNATURE_MAX_SIZE
+	hex "Max size of signed FIT structures in VPL"
+	depends on VPL_FIT_SIGNATURE
+	default 0x10000000
+	help
+	  This option sets a max size in bytes for verified FIT uImages.
+	  A sane value of 256MB protects corrupted DTB structures from overlapping
+	  device memory. Assure this size does not extend past expected storage
+	  space.
+
+endif # VPL
 
 endif # FIT
 
