--- a/configs/sandbox_vpl_defconfig
+++ b/configs/sandbox_vpl_defconfig
@@ -249,3 +249,5 @@ CONFIG_SPL_UNIT_TEST=y
 CONFIG_UT_TIME=y
 CONFIG_UT_DM=y
 CONFIG_VPL_TIMER=y
+# CONFIG_VPL_LZMA is not set
+CONFIG_SPL_TEXT_BASE=0x10000
