--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -96,12 +96,12 @@
 			u-boot,dm-vpl;
 			compatible = "fwupd,vbe-simple";
 			storage = "mmc2";
-			skip-offset = <0x200000>;
+			skip-offset = <0x400000>;
 			area-start = <0>;
 			area-size = <0xe00000>;
-			state-offset = <0xe00000>;
+			state-offset = <0xdffc00>;
 			state-size = <0x40>;
-			version-offset = <0xe00200>;
+			version-offset = <0xdffe00>;
 			version-size = <0x100>;
 		};
 	};
