--- a/configs/sandbox_vpl_defconfig
+++ b/configs/sandbox_vpl_defconfig
@@ -250,4 +250,5 @@ CONFIG_UT_TIME=y
 CONFIG_UT_DM=y
 CONFIG_VPL_TIMER=y
 # CONFIG_VPL_LZMA is not set
-CONFIG_SPL_TEXT_BASE=0x10000
+CONFIG_SPL_TEXT_BASE=0x100000
+CONFIG_FIT_BEST_MATCH=y
