--- a/arch/sandbox/dts/test.dts
+++ b/arch/sandbox/dts/test.dts
@@ -84,7 +84,7 @@
 		compatible = "u-boot,boot-std";
 
 		filename-prefixes = "/", "/boot/";
-		bootdev-order = "mmc2", "mmc1";
+		bootdev-order = "mmc2", "mmc1", "mmc4";
 
 		syslinux {
 			compatible = "u-boot,distro-syslinux";
@@ -92,6 +92,10 @@
 
 		efi {
 			compatible = "u-boot,distro-efi";
+		};
+
+		script {
+			compatible = "u-boot,script";
 		};
 
 		/*
@@ -1001,6 +1005,13 @@
 		compatible = "sandbox,mmc";
 		filename = "image.bin";
 		non-removable;
+	};
+
+	/* This is used for bootstd bootmenu tests */
+	mmc4 {
+		//status = "disabled";
+		compatible = "sandbox,mmc";
+		filename = "mmc4.img";
 	};
 
 	pch {
