--- a/arch/arm/dts/rockchip-optee.dtsi
+++ b/arch/arm/dts/rockchip-optee.dtsi
@@ -35,8 +35,7 @@
 					load = <(CFG_SYS_SDRAM_BASE + 0x8400000)>;
 					entry = <(CFG_SYS_SDRAM_BASE + 0x8400000)>;
 
-					blob-ext {
-						filename = "tee.bin";
+					tee-os {
 					};
 				};
 				fdt {
