--- a/configs/snow_defconfig
+++ b/configs/snow_defconfig
@@ -104,3 +104,6 @@ CONFIG_TPM=y
 CONFIG_ERRNO_STR=y
 CONFIG_UNIT_TEST=y
 # CONFIG_UT_LIB_ASN1 is not set
+CONFIG_BLOBLIST=y
+CONFIG_CMD_BLOBLIST=y
+CONFIG_BLOBLIST_ADDR=0
