--- a/configs/rockpro64-rk3399_defconfig
+++ b/configs/rockpro64-rk3399_defconfig
@@ -17,7 +17,7 @@ CONFIG_SPL_SPI=y
 CONFIG_SYS_LOAD_ADDR=0x800800
 CONFIG_DEBUG_UART=y
 CONFIG_HAS_CUSTOM_SYS_INIT_SP_ADDR=y
-CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0x300000
+CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0x380000
 CONFIG_BOOTSTAGE=y
 CONFIG_SPL_BOOTSTAGE=y
 CONFIG_TPL_BOOTSTAGE=y
@@ -112,3 +112,11 @@ CONFIG_VIDEO_ROCKCHIP=y
 CONFIG_DISPLAY_ROCKCHIP_HDMI=y
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_ERRNO_STR=y
+CONFIG_TRACE=y
+CONFIG_TRACE_EARLY=y
+CONFIG_TRACE_EARLY_ADDR=0x01000000
+CONFIG_TRACE_EARLY_SIZE=0x02000000
+CONFIG_TRACE_BUFFER_SIZE=0x10000000
+CONFIG_EXT4_WRITE=y
+CONFIG_CMD_EXT4_WRITE=y
+# CONFIG_EFI_LOADER is not set
