--- a/configs/rockpro64-rk3399_defconfig
+++ b/configs/rockpro64-rk3399_defconfig
@@ -113,7 +113,7 @@ CONFIG_DISPLAY_ROCKCHIP_HDMI=y
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_ERRNO_STR=y
 CONFIG_TRACE=y
-#CONFIG_TRACE_EARLY=y
+CONFIG_TRACE_EARLY=y
 CONFIG_TRACE_EARLY_ADDR=0x01000000
 CONFIG_TRACE_EARLY_SIZE=0x00300000
 CONFIG_TRACE_BUFFER_SIZE=0x10000000
