--- a/tools/binman/test/273_blob_symbol.dts
+++ b/tools/binman/test/273_blob_symbol.dts
@@ -5,12 +5,13 @@
 	#size-cells = <1>;
 
 	binman {
-		size = <4>;
+		size = <0x100>;
 		section-fill {
 			blob {
 				filename = "blob_syms.bin";
 				write-symbols;
 				elf-filename = "blob_syms";
+				elf-base-sym = "__my_start_sym";
 			};
 		};
 
